2nd commit on main code

--- a/team23.hackathon/notes/notes.html
+++ b/team23.hackathon/notes/notes.html
@@ -16,10 +16,10 @@
                 <span class="slider"></span>
               </label>
             </li>
-            <a href="generalnote.html">Add General Note</a></li>
-            <a href="chemistrynotes.html">Add CHEMISTRY Note</a></li>
-            <a href="mathematicsnotes.html">Add MATHEMATICS Note</a></li>
-            <a href="physicsnotes.html">Add PHYSICS Note</a></li>
+            <a href="generalnote.html">Add General Note</a>
+            <a href="chemistrynotes.html">Add CHEMISTRY Note</a>
+            <a href="mathematicsnotes.html">Add MATHEMATICS Note</a>
+            <a href="physicsnotes.html">Add PHYSICS Note</a>
         </ul>
     </nav>
     <main>
