removing unused html file

--- a/team23.hackathon/notes/chemistrynotes.html
+++ b/team23.hackathon/notes/chemistrynotes.html
@@ -15,7 +15,7 @@
                 <span class="slider"></span>
               </label>
             </li>
-            <li><a href="chemsnotes.html" class="newnote-navbar-link">View Saved<em> CHEM </em>Notes</a></li>
+            <li><a href="notes.html" class="newnote-navbar-link">View Saved<em> CHEM </em>Notes</a></li>
         </ul>
     </nav>
     <main>
